--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,10 +1,18 @@
-numpy>=2.2.0
-pandas>=2.2.0
-scikit-learn>=1.4.0
-joblib>=1.3.2
-fastapi>=0.115.0
-uvicorn>=0.34.0
-pydantic>=2.10.0
-pytest>=8.3.0
-httpx>=0.28.0
-python-multipart>=0.0.20 
+numpy==1.24.3
+pandas==2.0.3
+scikit-learn==1.3.0
+xgboost==2.0.1
+lightgbm==3.4.0
+catboost==1.1.1
+optuna==3.3.0
+fastapi==0.104.1
+uvicorn==0.24.0
+python-dotenv==1.0.0
+kaggle==1.5.16
+matplotlib==3.8.2
+seaborn==0.13.0
+plotly==5.18.0
+pytest==7.4.3
+black==23.11.0
+isort==5.12.0
+flake8==6.1.0 
