--- a/ml/requirements.txt
+++ b/ml/requirements.txt
@@ -1,5 +1,5 @@
-numpy==1.24.3
-pandas==2.0.3
-matplotlib==3.8.2
-seaborn==0.13.0
-scikit-learn==1.3.0 
+numpy>=2.1.0
+pandas>=2.2.0
+matplotlib>=3.8.2
+seaborn>=0.13.0
+scikit-learn>=1.4.0 
