--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,8 +1,13 @@
 flask==3.0.2
 flask-cors==4.0.0
-waitress==3.0.0
+gunicorn==21.2.0
 numpy==1.24.3
 pandas==2.0.3
 scikit-learn==1.3.0
 joblib==1.3.2
-python-dotenv==1.0.1 
+python-dotenv==1.0.1
+werkzeug==3.0.1
+click==8.1.7
+itsdangerous==2.1.2
+jinja2==3.1.3
+markupsafe==2.1.5 
