--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -2,12 +2,17 @@ services:
   - type: web
     name: churn-predictor-api
     env: python
-    buildCommand: pip install -r requirements.txt
+    buildCommand: |
+      python -m pip install --upgrade pip
+      pip install -r requirements.txt
     startCommand: gunicorn app:app
     envVars:
       - key: PYTHON_VERSION
         value: 3.11.0
       - key: FLASK_ENV
         value: production
+      - key: PYTHONUNBUFFERED
+        value: 1
     healthCheckPath: /health
-    autoDeploy: true 
+    autoDeploy: true
+    plan: free 
