--- a/crm-admin/package.json
+++ b/crm-admin/package.json
@@ -13,11 +13,13 @@
     "@auth/prisma-adapter": "^1.0.12",
     "@hookform/resolvers": "^3.10.0",
     "@prisma/client": "^5.10.0",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.6",
     "@tanstack/react-query": "^4.36.1",
+    "@tanstack/react-table": "^8.21.2",
     "@trpc/client": "^10.45.0",
     "@trpc/next": "^10.45.0",
     "@trpc/react-query": "^10.45.0",
